@ trainer pokemons have max friendship
@ lowercase pokemon names
@ fixed the Leaders heads in the trainer card
@ added third trainer card page for kanto badges
@ berry trees give 3 to 5 berries
@ kurt instantly makes acorn pokeballs
@ reworked remach system for better by removing the previus remach requirement for the battles and always trying to give the trainer phone number to the player
@ reworked initialization system
@ changed multi-hit probabilities, now is 50% for 3 hits, 25% for 4 hits and 12,5% for either 2 or 5 hits
@ reworked swarm system
@ reworked beat up
@ headbutt works on kanto
@ lottery corner generate a lucky number daily
@ allow more trainer parties, with individual DVs, stat experience, nicknames, variable teams, etc
  overworld actions no longer need hm on pokemon, but instead they just need a special item and some special confition(a "flying" mon for fly and so on)
@ no more trade evolutions, all are changed to something else but no "evolve at level x"
@ move dependent evolution, some pokemon need to learn certain moves to evolve
@ held item depent evolution, some pokemon need to hold certain items to evolve
  removed dragon scale
@ your starter holds a item relevant to it's final evolution each 
@ infinite tm uses
@ the gs ball event can be activated by beating red and entering goldenrod pokemon center upstairs while suicune is on the party
@ removed artificial save delay(readded on accident, to be removed again)
@ added the newbox(bill's pc overhall)
@ removed the redundant move grammar
@ added a forth status page showing the stat xp/dvs
@ added hail as a new wheather
@ hail raises ice type pokemon defence by 50%
  all 251 pokemon are obtainable
-- tm/hm system rework --
Tm are infinitly usable and more plentyfull, but way less pokemon learn from them and they have worse moves
Hm are hard to get but are good moves learnble for a lot of pokemon
