@@ -40,6 +40,7 @@
 @ removed artificial save delay(readded on accident, to be removed again)
 @ added the newbox(bill's pc overhall)
 @ removed the redundant move grammar
+@ reworked gender formula so some female pokemon can have max dvs
 @ added a forth status page showing the stat xp/dvs
 @ added hail as a new wheather
 @ hail raises ice type pokemon defence by 50%
